--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
 </div>
 </div>
 <div class="game-container tab-screen active-tab" id="screen-game" style="display:none">
+
+<div style="text-align:center; margin-bottom:10px;">
+<div style="font-size:18px; font-weight:bold;">Уровень <span id="playerLevel">1</span></div>
+<div style="width:100%; background:#ccc; border-radius:8px; height:10px; margin-top:4px;">
+<div id="xpBar" style="height:10px; width:0%; background:linear-gradient(to right, #00c6ff, #0072ff); border-radius:8px;"></div>
+</div>
+</div>
 <div class="balance" id="tokenCount">0 токенов</div>
 <img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
 <div class="menu-buttons">
@@ -535,13 +542,35 @@ function switchTab(tabId) {
   document.getElementById(tabId).classList.add('active-tab');
   if (tabId === 'screen-leaderboard') loadLeaderboard();
 }
+
+let xp = 0;
+let level = 1;
+const xpToNextLevel = () => 20 + (level - 1) * 10;
+
+function updateXP(amount) {
+  xp += amount;
+  let need = xpToNextLevel();
+  if (xp >= need) {
+    xp -= need;
+    level++;
+    document.getElementById('playerLevel').textContent = level;
+  }
+  const percent = Math.floor((xp / xpToNextLevel()) * 100);
+  document.getElementById('xpBar').style.width = percent + '%';
+}
+
+// Вызываем при каждом тапе
+const originalHandleTap = handleTap;
+handleTap = function () {
+  originalHandleTap();
+  updateXP(1);
+}
 </script>
 <div class="booster-modal" id="leaderboard-modal">
 <h2>Топ игроков</h2>
 <ul id="leaderboardList"></ul>
 <button onclick="closeLeaderboard()">Закрыть</button>
 </div>
-
 <div id="bottom-nav" style="position:fixed;bottom:0;width:100%;display:flex;justify-content:space-around;padding:10px;background:#fff;z-index:10001;box-shadow:0 -2px 10px rgba(0,0,0,0.1);">
 <button class="tab-btn" onclick="switchTab('screen-game')">🦈</button>
 <button class="tab-btn" onclick="switchTab('screen-shop')">🛒</button>
