--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
 .tab-btn:active {
   transform: scale(0.95);
 }
+
+.game-container { padding-bottom: 80px; }
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
@@ -279,7 +281,6 @@
 </div>
 <div class="balance" id="tokenCount">0 токенов</div>
 <img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
-
 </div>
 <div class="shop-modal tab-screen" id="screen-shop">
 <div class="shop-item">
