--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
     }
 
 
+
+function switchTab(tabId) {
+  const screens = document.querySelectorAll('[id^="screen-"]');
+  screens.forEach(s => s.style.display = 'none');
+  const target = document.getElementById(tabId);
+  if (target) target.style.display = 'block';
+
+  // Удалим активные классы с кнопок и добавим на текущую
+  document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
+  const clicked = Array.from(document.querySelectorAll('.tab-button')).find(b => b.onclick.toString().includes(tabId));
+  if (clicked) clicked.classList.add('active');
+
+  // Вибрация на мобильных
+  if (window.navigator.vibrate) {
+    window.navigator.vibrate(30);
+  }
+}
 </script>
 <style>
     * {
@@ -252,6 +269,38 @@
 }
 
 .game-container { padding-bottom: 80px; }
+
+/* Нижняя панель */
+.tab-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  background: linear-gradient(90deg, #0d47a1, #1976d2);
+  padding: 10px 0;
+  z-index: 10000;
+  border-top: 2px solid #fff3;
+}
+.tab-button {
+  flex: 1;
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+.tab-button:active {
+  transform: scale(0.95);
+}
+/* Активная вкладка */
+.tab-button.active {
+  color: #ffeb3b;
+  text-shadow: 0 0 5px #fff;
+}
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
@@ -282,7 +331,7 @@
 <div class="balance" id="tokenCount">0 токенов</div>
 <img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
 </div>
-<div class="shop-modal tab-screen" id="screen-shop">
+<div class="shop-modal tab-screen" id="screen-shop" style="display:none">
 <div class="shop-item">
 <img src="shark.png?v=1"/>
 <button onclick="buySkin('default', 0)">Выбрать</button>
@@ -297,7 +346,7 @@
 </div>
 <button onclick="closeShop()">Закрыть</button>
 </div>
-<div class="booster-modal tab-screen" id="screen-boosters">
+<div class="booster-modal tab-screen" id="screen-boosters" style="display:none">
 <div class="booster-item">
 <div class="booster-info">Авто-Тап +1 (50 токенов)</div>
 <button onclick="buyBooster(50, 1)">Купить</button>
@@ -625,12 +674,12 @@ setTimeout(() => {
 <button class="tab-btn" onclick="switchTab('screen-boosters')">⚡</button>
 <button class="tab-btn" onclick="switchTab('screen-leaderboard')">🏆</button>
 <button class="tab-btn" onclick="switchTab('screen-quests')">📜</button><button class="tab-btn" onclick="Telegram.WebApp.close()">❌</button></div>
-<div class="tab-screen" id="screen-quests" style="display:none; flex-direction:column; align-items:center; justify-content:center; padding:20px;">
+<div class="tab-screen" id="screen-quests" style="display:none">
 <h2>📜 Задания</h2>
 <div style="margin-top:10px;">
 <p>👥 Пригласи друга и получи 🎁</p>
 <button class="shop-button" onclick="shareGame()">Пригласить через Telegram</button>
 </div>
 </div>
-</body>
+<div class="tab-bar"><button class="tab-button" onclick="switchTab('screen-game')">🦈 Игра</button><button class="tab-button" onclick="switchTab('screen-quests')">🎯 Миссии</button><button class="tab-button" onclick="switchTab('screen-leaderboard')">🏆 Олимп</button><button class="tab-button" onclick="switchTab('screen-inventory')">🎒 Нора</button><button class="tab-button" onclick="switchTab('screen-profile')">👤 Профиль</button></div></body>
 </html>
